--- a/Typescript/index.html
+++ b/Typescript/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>TypScript</title>
-        <script src="app.js"></script>
+        <script src="examen.js"></script>
     </head>
     <body>
 
